--- a/production/javascript_note/src/styles/auth.scss
+++ b/production/javascript_note/src/styles/auth.scss
@@ -4,3 +4,8 @@
     background-color: $custom-purple;
     height: calc(100% - 70px);
 }
+
+.card-content {
+    margin-bottom: 0;
+    margin-top: -40px;
+}
