--- a/production/javascript_note/src/styles/header.scss
+++ b/production/javascript_note/src/styles/header.scss
@@ -11,3 +11,13 @@ nav.navbar {
         }
     }
 }
+
+.card-content{
+    padding: 0px;
+}
+
+.navbar-logged {
+     .navbar-menu{
+        background-color: $custom-purple;
+     }
+   }
